--- a/src/app.css
+++ b/src/app.css
@@ -37,7 +37,7 @@
     --sidebar-ring: oklch(0.623 0.214 259.815);
 }
 
-@media (prefers-color-scheme: dark) {
+/*@media (prefers-color-scheme: dark) {
     :root {
         --background: oklch(0.141 0.005 285.823);
         --foreground: oklch(0.985 0 0);
@@ -71,7 +71,7 @@
         --sidebar-border: oklch(1 0 0 / 10%);
         --sidebar-ring: oklch(0.488 0.243 264.376);
     }
-}
+}*/
 
 @theme inline {
     --radius-sm: calc(var(--radius) - 4px);
